// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker DatePicker 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-input za-picker-placeholder"
  >
    <input
      type="hidden"
      value=""
    />
    请选择
  </div>
  <div
    class="za-picker-container za-picker-hidden"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms;"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              请选择
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-column-group"
              >
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-cascader"
                  >
                    <div
                      class="za-picker-cascader-indicator"
                    />
                    <div
                      class="za-picker-cascader-content"
                    >
                      <div
                        class="za-picker-cascader-item za-picker-cascader-item-selected"
                      >
                        2000年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2001年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2002年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2003年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2004年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2005年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2006年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2007年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2008年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2009年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2010年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2011年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2012年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2013年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2014年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2015年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2016年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2017年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2018年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2019年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2020年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2021年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2022年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2023年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2024年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2025年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2026年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2027年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2028年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2029年
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2030年
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-cascader"
                  >
                    <div
                      class="za-picker-cascader-indicator"
                    />
                    <div
                      class="za-picker-cascader-content"
                    >
                      <div
                        class="za-picker-cascader-item za-picker-cascader-item-selected"
                      >
                        1月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        3月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        4月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        5月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        6月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        7月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        8月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        9月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        10月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        11月
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        12月
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-cascader"
                  >
                    <div
                      class="za-picker-cascader-indicator"
                    />
                    <div
                      class="za-picker-cascader-content"
                    >
                      <div
                        class="za-picker-cascader-item za-picker-cascader-item-selected"
                      >
                        1日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        2日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        3日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        4日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        5日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        6日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        7日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        8日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        9日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        10日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        11日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        12日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        13日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        14日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        15日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        16日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        17日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        18日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        19日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        20日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        21日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        22日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        23日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        24日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        25日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        26日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        27日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        28日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        29日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        30日
                      </div>
                      <div
                        class="za-picker-cascader-item"
                      >
                        31日
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Picker StackPicker 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-input za-picker-placeholder"
  >
    <input
      type="hidden"
      value=""
    />
    请选择
  </div>
  <div
    class="za-picker-container za-picker-hidden"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms;"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              请选择
            </div>
            <div
              class="za-picker-submit"
            />
          </div>
          <div
            class="za-picker-crumbs"
          >
            <p>
              选择：
            </p>
          </div>
          <div
            class="za-picker-stack-group"
          >
            <div
              class="za-picker-stack-column lower-hidden"
            >
              <div
                class="za-picker-stack-column-wrapper"
              >
                <div
                  class="za-picker-stack-item"
                >
                  北京市
                </div>
                <div
                  class="za-picker-stack-item"
                >
                  上海市
                </div>
              </div>
            </div>
            <div
              class="za-picker-stack-column lower-hidden"
            >
              <div
                class="za-picker-stack-column-wrapper"
              >
                <div
                  class="za-picker-stack-item"
                >
                  海淀区
                </div>
                <div
                  class="za-picker-stack-item"
                >
                  西城区
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Picker renders correctly 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-input za-picker-placeholder"
  >
    <input
      type="hidden"
      value=""
    />
    请选择
  </div>
  <div
    class="za-picker-container"
  >
    <div
      class="za-popup za-popup-hidden za-popup-inner"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms;"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              请选择
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-column-group"
              >
                <div
                  class="za-picker-column-group-item"
                >
                  <div
                    class="za-picker-column"
                  >
                    <div
                      class="za-picker-column-indicator"
                    />
                    <div
                      class="za-picker-column-content"
                    >
                      <div
                        class="za-picker-column-item za-picker-column-item-selected"
                      >
                        选项一
                      </div>
                      <div
                        class="za-picker-column-item"
                      >
                        选项二
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
